# experiments

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze.py  explore.py  generate_platform.py  plot_effective_intensities_from_traces.py  plot_intensities.py  plot_power.py  pyproject.toml  runner.py  shell.nix
configs/: alphas.json  experiments.json  experiments.toml  full.json  thresholds.json  typical_intensities.json
energy-data/: README.md  build_energy_traces.py  clean_energy_trace.csv  energy_mix.toml  fossil_heavy_trace.csv  generate_traces.py  intensities.json  mixed_trace.csv  scrap_energy_mix.py  scrap_wue.py
energy-data/traces/: clean_energy_trace.csv  fossil_heavy_trace.csv  mixed_trace.csv
energy-mix/: README.md  clean_energy_trace.csv  mixed_trace.csv  scrap_energy_mix.py
intensity-factors/: README.md
platform/: clean_energy_platform.xml  fossil_heavy_platform.xml  generate_platform.py  mixed_platform.xml  mustang_platform.xml
platform/load_platform_script/: CMakeLists.txt  README.md  example.cpp  platform.cpp
typical_intensities/: DE_autumn.csv  DE_spring.csv  DE_summer.csv  DE_winter.csv  FR_autumn.csv  FR_spring.csv  FR_summer.csv  FR_winter.csv  PL_autumn.csv  PL_spring.csv  PL_summer.csv  PL_winter.csv
workloads/: README.md  generate_workloads.py  large.json  mixed.json  mustang.ipynb  small.json
workloads/2012-02-07/: week_fraction.csv  workload_batsim.json
workloads/2012-12-13/: week_fraction.csv  workload_batsim.json
workloads/2015-08-06/: week_fraction.csv  workload_batsim.json
